# webapp_components

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CRE8_LIBRARY_ANALYSIS.md  CRE8_library.xlsx  CRE8_library_analysis_report.md  DEPLOYMENT_README.md  KEYWORD_AUTOCOMPLETE_FEATURES.md  Makefile  PERFORMANCE_GUIDE.md  PICTURE_GENERATION_SUMMARY.md  PROJECT_STATUS.md  PROJECT_WORKFLOW.md  README.md  RULES.md  WEBDAV_SETUP.md  analyze_cre8_library.py  app_workflow.md  config.py  create_app_skeleton.sh  database_cre8_connection_analysis.py  database_triggers_backup.md  debug_picture_issue.py  debug_trigger.py  deploy_optimizations.sh  deploy_to_remote.sh  docker-compose.prod.yml  docker-compose.yml  docker-mount-webdav.sh  generate_component_type_queries.py  instructions_for_user.md  message.md  mount-webdav-simple.sh  mount-webdav.sh  nginx.conf  package-lock.json  performance_optimizations.py  pyproject.toml  quick_restart.sh  (+16 more)
.claude/: ENFORCEMENT_SYSTEM.md  settings.local.json.backup
app/: __init__.py  add_sample_variants.py  brand_routes.py  cache_config.py  create_sample_data.py  models.py  optimized_routes.py  routes.py  routes.py.save  utils.py  utils_legacy.py  webdav_config.py
claude_workflow/: api_documentation.md  architecture_overview.md  database_schema_guide.md  development_rules.md  endpoint_separation_guide.md  instructions_for_claude.md  instructions_for_user.md  project_status.md  selenium_testing_guidelines.md  test_reports.md  testing_rules.md  tests.md  ux_design_guidelines.md
docs/: api_documentation.md  architecture_overview.md  claude_enforcement_system.md  database_schema_guide.md  development_rules.md  instructions_for_claude.md  instructions_for_user.md  project_status.md  project_status.md.backup  testing_rules.md
scripts/: backup.sh  check-db.sh  deploy.sh  dev-setup.sh  format.sh  logs.sh  monitoring.sh  run-coverage.sh  (+1 more)
(+261 files in other folders)
